test/data/valid/invalid_other.py
__version__ = '1.2.3'
other = sum(range(20))
