test/data/invalid/overwrite1.py
__version__ = '1.2.3'
__version__ = '.'.join(map(str, range(3)))
